some custom components are added

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -28,3 +28,11 @@
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
+
+/* CodeBlock CSS */
+
+.prism-code {
+  border-radius: 0px !important;
+}
+
+/* CodeBlock End */
